assets/css/style.css
* {
  margin: 0;
  padding: 0;
  scroll-behavior: smooth;
}

body {
  max-width: 1400px;
  font-size: 16px;
  font-family: "Roboto", sans-serif;
  margin: 1em auto;
}

h1 {
  margin: 0.35em auto;
  padding-top: 0.25em;
  font-size: 28px;
}

h2 {
  margin: 15px auto;
  font-size: 20px;
}

h5 {
  font-size: 1em;
}

section {
  margin-top: 1.5em;
  margin-bottom: 1.5em;
}

li {
  list-style-type: none;
  padding: 0 10px;
}

a {
  text-decoration: none;
  font-size: 0.9em;
}

a:active {
  color: #12e4df;
}

a:hover {
  color: palevioletred;
}

.title-line {
  width: 85%;
  height: 2px;
  background-color: black;
}

.line {
  width: 100%;
  height: 2px;
  background-color: black;
  margin: 10px auto;
}

.container {
  padding: 0.5em ;
  width: 75%;
  box-shadow: 0 0 45px #888888;
}

.center-complex-content {
  display: flex;
  flex-direction: column;
  align-items: center;
  margin: 0.2em;
}

.main, .header {
  display: flex;
}

.left-side {
  width: 45%;
  margin-right: 1.5em;
}

.main > .left-side {
  border-right: 2px solid black;
}

.main > .left-side {
  border-right: 2px solid black;
}

.right-side {
  width: 55%;
}

.profession {
  margin: 7px auto;
  font-style: italic;
  font-size: 20px;
}

.turquoise-text {
  color: #35b1bf;
}

.img-logo {
  width: 150px;
  height: 130px;
  border-radius: 35%;
}

.center-content {
  text-align: center;
}

.links > ul {
  display: flex;
  justify-content: space-between;
}

.plain-text {
  text-align: justify;
  padding-right: 3%;
  padding-left: 3%;
}

.indent {
  padding-left: 5%;
}

.left-side-title {
  display: block;
  width: 6em;
  background-color: #35b1bf;
  color: white;
}

.education-content {
  display: flex;
  
}

.title-name {
  margin-left: 2em;
}

.title-name > div {
  margin-bottom: 0.7em;
}

.list-with-icons > li {
  display: flex;
  align-items: baseline;
  text-align: center;
  margin: 0.5em;
  
}

.list-with-icons > li > i {
  font-size: 1.5em;
  margin: 0.5em;
}

.list-projects {
  display: flex;
  justify-content: space-evenly;
  flex-wrap: wrap;
}

.list-projects > figure {
  display: block;
  margin: 0.5em 0.2em;
  text-align: center;
  width: 150px;
}


.list-languages > li {
  padding-top: 0.5em;
  padding-bottom: 1.5em;
}

.range {
  width: 95%;
  background-color: #ddd;
  border-radius: 25px;
  box-shadow: 0px 0px 5px #c6cec9;
  margin-top: 0.5em;
}
.skills {
  text-align: right;
  padding-right: 20px;
  height: 17px;
  color: white;
  border-radius: 25px;
}

.russia {
  width: 90%;
  background-color: #4caf50;
}

.english {
  width: 60%;
  background-color: #2196f3;
}

.plain-list {
  margin-left: 2.5em;
}
.plain-list  > li {
  list-style-type: disc ;
  margin: 0.5em auto;
}

.college {
  width: 20%;
  font-size: 0.8em;
  
}

